<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_min_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/minPrice"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_max_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_min_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_max_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/maxPrice"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_min_price"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_max_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_min_surface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/minSurface"
        app:layout_constraintTop_toBottomOf="@id/search_min_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_max_surface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_min_surface_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_max_surface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/maxSurface"
        app:layout_constraintTop_toBottomOf="@id/search_max_price"
        app:layout_constraintStart_toEndOf="@id/search_min_surface"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_max_surface_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_min_rooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/minRooms"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_min_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_max_rooms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_min_rooms_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_max_rooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/maxRooms"
        app:layout_constraintTop_toBottomOf="@id/search_max_surface"
        app:layout_constraintStart_toEndOf="@id/search_min_rooms"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_max_rooms_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_point"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/search_max_rooms">
    <CheckBox
        android:id="@+id/search_health"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_school"/>
    <CheckBox
        android:id="@+id/search_school"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_health"
        app:layout_constraintEnd_toStartOf="@+id/search_market"/>
    <CheckBox
        android:id="@+id/search_market"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/market"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_school"
        app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
        android:id="@+id/search_transports"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/transports"
        app:layout_constraintTop_toBottomOf="@id/search_market"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_restaurant"/>
    <CheckBox
        android:id="@+id/search_restaurant"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        app:layout_constraintTop_toBottomOf="@id/search_market"
        app:layout_constraintStart_toEndOf="@id/search_transports"
        app:layout_constraintEnd_toStartOf="@id/search_park"/>
    <CheckBox
        android:id="@+id/search_park"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/park"
        app:layout_constraintTop_toBottomOf="@id/search_market"
        app:layout_constraintStart_toEndOf="@id/search_restaurant"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_min_datein"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sellSince"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintTop_toBottomOf="@id/layout_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_max_datein">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_min_datein_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:inputType="none|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_max_datein"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintTop_toBottomOf="@id/layout_point"
        app:layout_constraintStart_toEndOf="@id/search_min_datein"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_max_datein_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:inputType="none|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_min_datesold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/soldSince"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintTop_toBottomOf="@id/search_max_datein"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_max_datesold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_min_datesold_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:inputType="none|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_max_datesold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintTop_toBottomOf="@id/search_max_datein"
        app:layout_constraintStart_toEndOf="@id/search_min_datesold"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_max_datesold_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:inputType="none|textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>