...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list_property"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:listitem="@layout/item_property"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>
