<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/list" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_simulator"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/simulator" />

</menu>